--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.12.0"
+    "mongoose": "^5.12.0",
+    "stripe": "^8.149.0",
+    "uuid": "^8.3.2"
+  },
+  "engines": {
+    "node": "12.19.0"
   }
 }
