--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "IKDO",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "nodemon start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -14,10 +15,14 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.0",
+    "nodemailer": "^6.6.1",
+    "nodemon": "^2.0.7",
     "stripe": "^8.149.0",
     "uuid": "^8.3.2"
   },
